[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "classmodel"
description = "Chemistry Land-surface Atmosphere Soil Slab model"
version = "2020.03.0"
authors = [
  {name = "Jordi Vila-Guerau de Arellano" },
  {name = "Chiel van Heerwaarden" },
  {name = "Bart van Stratum" },
  {name = "Kees van den Dries" },
]
dependencies = [
  "matplotlib",
  "pandas",
  "numpy",
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.urls]
Homepage = "https://classmodel.github.io/"
Repository = "https://github.com/classmodel/modelpy"

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "C90",  # mccabe complexity
  "I",  # isort
  "N",  # PEP8-naming
  "UP",  # pyupgrade (upgrade syntax to current syntax)
  "PLE",  # Pylint error https://github.com/charliermarsh/ruff#error-ple
  "PLR",  # Pylint refactor (e.g. too-many-arguments)
  "PLW",  # Pylint warning (useless-else-on-loop)
]
lint.ignore = [
  "N802",  # Function name `Q` should be lowercase
  "N803",  # Argument name `T` should be lowercase
  "N806",  # Variable `RHlcl` in function should be lowercase
  "N815",  # Variable `dFz` in class scope should not be mixedCase
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
]
line-length = 120
